--- a/HW/books-search-plain-js/index.html
+++ b/HW/books-search-plain-js/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="search.js" defer></script>
-    <script src="constants.js" defer></script>
-
+    <script type="module" src="search.js" defer></script>
     <link rel="stylesheet" href="css\main.css">
 </head>
 <body>
@@ -22,14 +20,14 @@
     </nav>
     <main>
         <div id="search-wrapper">
-                <input type="checkbox" class = "checks">Author</input>
+                <!-- <input type="checkbox" class = "checks">Author</input>
                 <input type="text" class="search-box"></input>
                 <input type="checkbox" class = "checks">Title</input>
                 <input type="text" class="search-box"></input>
                 <input type="checkbox" class = "checks">Publisher</input>
                 <input type="text" class="search-box"></input>
                 <input type="checkbox" class = "checks">Subject</input>
-                <input type="text" class="search-box"></input>
+                <input type="text" class="search-box"></input> -->
                 <button id="submit-btn">Search</button>
             <!-- <input type="checkbox">Author</input>
             <datalist id="search-by">
