fixing, more to fix, books.json, Book class?

--- a/HW/books-search-plain-js/index.html
+++ b/HW/books-search-plain-js/index.html
@@ -20,23 +20,10 @@
     </nav>
     <main>
         <div id="search-wrapper">
-                <!-- <input type="checkbox" class = "checks">Author</input>
-                <input type="text" class="search-box"></input>
-                <input type="checkbox" class = "checks">Title</input>
-                <input type="text" class="search-box"></input>
-                <input type="checkbox" class = "checks">Publisher</input>
-                <input type="text" class="search-box"></input>
-                <input type="checkbox" class = "checks">Subject</input>
-                <input type="text" class="search-box"></input> -->
-                <button id="submit-btn">Search</button>
-            <!-- <input type="checkbox">Author</input>
-            <datalist id="search-by">
-                <option value="Author">
-                <option value="Title">
-                <option value="Publisher">
-                <option value="Subject">
-              </datalist> -->
-            <div id="error"></div>
+        <div id="error"></div>
+        </div>
+        <div id="content-wrapper">
+
         </div>
     </main>
     <footer>footer</footer>
