--- a/HW/books-search-plain-js/index.html
+++ b/HW/books-search-plain-js/index.html
@@ -9,14 +9,13 @@
     <link rel="stylesheet" href="css\main.css">
 </head>
 <body>
-    <header>header</header>
+    <header>header
+        <div href="#default" class="logo">CompanyLogo</div>
+    </header>
     <nav>
-        <a href="#default" class="logo">CompanyLogo</a>
-        <div class="header-right">
-            <a class="active" href="#home">Home</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
-        </div>
+        <a class="active" href="#home">Home</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
     </nav>
     <main>
         <div id="search-wrapper">
