Broad search; toggle specific and broad search

--- a/HW/books-search-plain-js/index.html
+++ b/HW/books-search-plain-js/index.html
@@ -20,10 +20,10 @@
     <main>
         <div id="search-wrapper">
         <div id="error"></div>
+        <div id="specific-search"></div>
         </div>
         <div id="content-wrapper">
-
-        </div>
+       </div>
     </main>
     <footer>footer</footer>
 </body>
