--- a/HW/books-search-plain-js/index.html
+++ b/HW/books-search-plain-js/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MODIS HW1 - Google Books API</title>
     <script type="module" src="search.js" defer></script>
     <link rel="stylesheet" href="css\main.css">
 </head>
 <body>
-    <header>header
+    <header>HEADER PLACEHOLDER
         <div href="#default" class="logo">CompanyLogo</div>
     </header>
     <nav>
+        <!-- NAV PLACEHOLDER LINKS -->
         <a class="active" href="#home">Home</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
@@ -25,6 +25,6 @@
         <div id="content-wrapper">
        </div>
     </main>
-    <footer>footer</footer>
+    <footer>FOOTER PLACEHOLDER</footer>
 </body>
 </html>
