--- a/HW/books-search-plain-js/index.html
+++ b/HW/books-search-plain-js/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MODIS HW1 - Google Books API</title>
     <script type="module" src="search.js" defer></script>
-    <link rel="stylesheet" href="css\main.css">
-</head>
-<body>
-    <header>HEADER PLACEHOLDER
-        <div href="#default" class="logo">CompanyLogo</div>
+    <link rel="stylesheet" href="css\main.css" />
+  </head>
+  <body>
+    <header>
+      HEADER PLACEHOLDER
+      <div href="#default" class="logo">CompanyLogo</div>
     </header>
     <nav>
-        <!-- NAV PLACEHOLDER LINKS -->
-        <a class="active" href="#home">Home</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+      <!-- NAV PLACEHOLDER LINKS -->
+      <a class="active" href="#home">Home</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
     </nav>
     <main>
-        <div id="search-wrapper">
+      <div id="search-wrapper">
         <div id="error"></div>
         <div id="specific-search"></div>
-        </div>
-        <div id="content-wrapper">
-       </div>
+      </div>
+      <div id="content-wrapper"></div>
     </main>
     <footer>FOOTER PLACEHOLDER</footer>
-</body>
+  </body>
 </html>
