--- a/03-es6-blog-rest/index.html
+++ b/03-es6-blog-rest/index.html
@@ -12,11 +12,11 @@
     <h1>Blog posts</h1>
 
     <form id = "add-post-form">
-        <input name="title" type="text" placeholder="Type in da blogs Title">
-        <input name="author" type="text" placeholder="Type in da authors ">
-        <button type="submit"> ADD DA POST</button>
-    </form>
-    <div id = "error"></div>>
+        <input name="title" type="text" placeholder="Type in the post title">
+        <input name="author" type="text" placeholder="Type in authors ">
+        <button type="submit"> ADD POST</button>
+    </form>>
+    <div id = "error"></div>
     <div id = "results">
 
     </div>
