--- a/HW/books-search-plain-js/index.html
+++ b/HW/books-search-plain-js/index.html
@@ -12,10 +12,10 @@
       HEADER PLACEHOLDER
       <div href="#default" class="logo">CompanyLogo</div>
     </header>
-    <nav>
+    <nav id="navbar">
       <!-- NAV PLACEHOLDER LINKS -->
-      <a class="active" href="#home">Home</a>
-      <a href="#contact">Contact</a>
+      <a id = "search-nav" href="/search">Search</a>
+      <a id = "favs-nav" href="/favourites">Favourites</a>
       <a href="#about">About</a>
     </nav>
     <main>
